@@ -1,5 +1,15 @@
 2005-02-21  Damien Sandras  <dsandras@gnome.org>
 
+	* gnomemeeting.schemas.in.in: Removed Gatekeeper key.
+
+	* src/Makefile.am: Added back LID building.
+
+	* src/accounts.cpp, src/common.h, src/pref_window.cpp: Removed
+	gatekeeper prefs now that they are integrated in the accounts
+	window.
+
+2005-02-21  Damien Sandras  <dsandras@gnome.org>
+
 	* src/endpoint.cpp, src/gnomemeeting.cpp, src/pref_window.cpp, 
 	src/pref_window.h: Moved codecs display to a saner place. Fixed
 	usage with newest OpalMediaFormat code.
